--- a/reservas.html
+++ b/reservas.html
@@ -80,12 +80,12 @@
           <div class="col-8">
             <div class="card ms-1 mb-3">
               <div class="card-body">
-                <i class="bi bi-arrow-left-right me-5"></i>MADRID-TOKYO<span class="ms-5">Ida: 09/09/2022</span><span class="ms-5">Vuelta: 01/10/2022</span><span class="ms-5"><a href="billeteIV.html" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
+                <i class="bi bi-arrow-left-right me-5"></i>MADRID-TOKYO<span class="ms-5">Ida: 09/09/2022</span><span class="ms-5">Vuelta: 01/10/2022</span><span class="ms-5"><a href="billeteIV.html" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Cancelar</a></span>
               </div>
             </div>
             <div class="card ms-1 mb-3">
               <div class="card-body">
-                <i class="bi bi-arrow-right me-5"></i>PARÍS<span class="ms-5"></span><span class="ms-4"></span><span class="ms-1"></span><span class="ms-5">Ida: 10/11/2022</span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger">Cancelar</a></span>
+                <i class="bi bi-arrow-right me-5"></i>PARÍS<span class="ms-5"></span><span class="ms-4"></span><span class="ms-1"></span><span class="ms-5">Ida: 10/11/2022</span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Cancelar</a></span>
               </div>
             </div>
           </div>
@@ -94,6 +94,25 @@
           
         </div>
       </section>
+
+      <!-- Modal -->
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">CANCELACIÓN DE BILLETES</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <b>¿Estás seguro de que quieres cancelar los billetes?</b> El dinero se devolverá en función del seguro escogido
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Volver</button>
+              <a href="reservasEliminada.html" type="button" class="btn btn-danger">Sí, estoy seguro</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="container border-top mt-5 py-5">
