--- a/seguros.html
+++ b/seguros.html
@@ -64,9 +64,16 @@
       <div class="container">
         <form method="post" action="infoReserva.html">
             <article class="mb-3">
-                <div class="row" >
-                    <h2 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h2>
-                </div>
+              <div class="container mt-5">
+                <section class="bg-img pt-5">
+                  <div class="container mb-4">
+                    <div class="row align-items-center">
+                      <div class="col">
+                        <h1 class="text-center">Ida Barcelona (BCN) - Lugo(LCG) 05/05/2022</h1>
+                      </div>
+                    </div>
+                  </div>
+                </section>
                 <div class="row">
                   <div class="col"></div>
                   <div class="col-10">
@@ -90,7 +97,7 @@
                         </div>
                       </label>
                     
-                      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" required>
+                      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" required >
                       <label class="btn " for="btnradio2">
                         <div class="col" id="columna2">
                             <div class="card mx-2 mb-4" id="tarjeta2">
