--- a/vueloIdaRoma.html
+++ b/vueloIdaRoma.html
@@ -61,6 +61,15 @@
   
 
     <main class="my-5">
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <div class="container border text-center" id="advertencia">
+            <h4>Para seleccionar un billete se debera hacer click en el botón que se encuentra en el lateral del mismo</h4>
+          </div>
+        </div>
+        <div class="col-4"></div>
+      </div>
         <div class="container">
             <form method="post" action="seguros.html">
                 <article class="mb-3">
