--- a/index3.html
+++ b/index3.html
@@ -50,6 +50,7 @@
               </div>
               
               <div class="col-md-3 text-end">
+                <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
                 <a href="perfilCompletoTarjeta.html" class="btn btn-light">Mi perfil</a>
                 <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
               </div>
@@ -138,7 +139,7 @@
                 <div class="card mb-4">
                   <div class="card-body">
   
-                    <form method="post" action="buscarVuelosIdaYVuelta.html">
+                    <form method="post" action="buscarVueloIda.html">
                       <div class="row">
                         <div class="col">
                           <div class="form-floating">
@@ -298,7 +299,7 @@
           </div>
         </div>
 
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel  slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
