--- a/FAQs.html
+++ b/FAQs.html
@@ -14,7 +14,7 @@
       <div class="bg-dark fixed-top">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-              <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+              <a href="index3.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
                 <h4 class="text-light">Airplane</h4>
               </a>
