--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="card mb-4">
                   <div class="card-body">
   
-                    <form method="post" action="buscarVuelosIdaYVuelta.html">
+                    <form method="post" action="buscarVueloIda.html">
                       <div class="row">
                         <div class="col">
                           <div class="form-floating">
@@ -192,7 +192,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">Tokyo</h5>
-                    <a href="vueloIdaTokyo.html" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -208,7 +208,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">Roma</h5>
-                    <a href="vueloIdaRoma.html" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -224,7 +224,7 @@
                   <div class="card-body">
                     <p class="card-text mb-1">Vuelos a</p>
                     <h5 class="card-title">París</h5>
-                    <a href="vueloIdaYVueltaParis.html" class="btn btn-warning mb-3">Buscar vuelos</a>
+                    <a href="buscarVueloIda.html" class="btn btn-warning mb-3">Buscar vuelos</a>
                   </div>
                 </div>
               </div>
@@ -298,7 +298,7 @@
           </div>
         </div>
 
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -327,7 +327,7 @@
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <button class="carousel-control-prev"  type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
