--- a/perfil.html
+++ b/perfil.html
@@ -50,7 +50,7 @@
             </div>
             
             <div class="col-md-3 text-end">
-              <a href="perfilCompletoTarjeta.html" class="btn btn-light">Mi perfil</a>
+              <a href="perfil.html" class="btn btn-light">Mi perfil</a>
               <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
             </div>
           </header>
