--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -83,30 +83,30 @@
 
             <form method="post" action="perfilCompletoTarjeta.html">
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNombre" placeholder="Nombre" required>
+                <input type="text" class="form-control" id="floatingNombre" placeholder="Nombre" required="required">
                 <label for="floatingNombre">Nombre completo de la tarjeta*</label>
               </div>
 
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required>
+                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required="required">
                 <label for="floatingNum">Número de la tarjeta (0000 0000 0000 0000)*
-                    <img src="https://i.imgur.com/2ISgYja.png" width="30">
-                    <img src="https://i.imgur.com/W1vtnOV.png" width="30">
-                    <img src="https://i.imgur.com/35tC99g.png" width="30">
+                    <img src="https://i.imgur.com/2ISgYja.png" width="30" alt="Logotipo de Mastercard">
+                    <img src="https://i.imgur.com/W1vtnOV.png" width="30" alt="Logotipo de Visa">
+                    <img src="https://i.imgur.com/35tC99g.png" width="30" alt="Logotipo de Stripe">
                 </label>
               </div>
 
               <div class="row g-2">
                 <div class="col-md">
                   <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9]/[0-9][0-9]" required>
+                    <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9]/[0-9][0-9]" required="required">
                     <label for="floatingFecha">Fecha de expiración (MM/AA)*</label>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="form-floating">
                     <div class="form-floating mb-3">
-                      <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9][0-9]" required>
+                      <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9][0-9]" required="required">
                       <label for="floatingFecha">CVV*</label>
                     </div>
                   </div>
@@ -119,7 +119,7 @@
 
             <div class="text-center">
               <h3 class="mt-5 mb-2">¿Qué es el CVV?</h3>
-              <img src="img/cvv.png" width="500px"></img>
+              <img src="img/cvv.png" width="500px" alt="Explicación de que es el CVV de las tarjetas de crédito"></img>
             </div>
           </div>
 
