--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -88,7 +88,7 @@
               </div>
 
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required="required">
+                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta" pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required="required">
                 <label for="floatingNum">Número de la tarjeta (0000 0000 0000 0000)*
                     <img src="https://i.imgur.com/2ISgYja.png" width="30" alt="Logotipo de Mastercard">
                     <img src="https://i.imgur.com/W1vtnOV.png" width="30" alt="Logotipo de Visa">
@@ -106,7 +106,7 @@
                 <div class="col-md">
                   <div class="form-floating">
                     <div class="form-floating mb-3">
-                      <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9][0-9]" required="required">
+                      <input type="text" class="form-control" id="floatingCVV" placeholder="CVV" pattern="[0-9][0-9][0-9]" required="required">
                       <label for="floatingFecha">CVV (000)*</label>
                     </div>
                   </div>
