--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -119,7 +119,7 @@
 
             <div class="text-center">
               <h3 class="mt-5 mb-2">¿Qué es el CVV?</h3>
-              <img src="img/cvv.png" width="500px" alt="Explicación de que es el CVV de las tarjetas de crédito"></img>
+              <img src="img/cvv.png" width="500px" alt="Explicación de que es el CVV de las tarjetas de crédito">
             </div>
           </div>
 
