--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -107,7 +107,7 @@
                   <div class="form-floating">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="floatingCVV" placeholder="CVV" pattern="[0-9][0-9][0-9]" required="required">
-                      <label for="floatingFecha">CVV (000)*</label>
+                      <label for="floatingCVV">CVV (000)*</label>
                     </div>
                   </div>
                 </div>
