--- a/atencionCliente.html
+++ b/atencionCliente.html
@@ -43,15 +43,15 @@
               Viajar
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item active" href="index2.html">Buscar vuelo</a></li>
-              <li><a class="dropdown-item" href="index2.html#moda">Ciudades de moda</a></li>
-              <li><a class="dropdown-item" href="index2.html#ofertas">Ofertas</a></li>
+              <li><a class="dropdown-item active" href="index3.html">Buscar vuelo</a></li>
+              <li><a class="dropdown-item" href="index3.html#moda">Ciudades de moda</a></li>
+              <li><a class="dropdown-item" href="index3.html#ofertas">Ofertas</a></li>
             </ul>
           </div>
           
           <div class="col-md-3 text-end">
             <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-            <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
+            <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
             <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
           </div>
         </header>
@@ -65,7 +65,7 @@
           <div class="col">
           </div>
           <div class="col">
-            <h1 class="text-center" style="color: #000000;">Atención al cliente</h1>
+            <h1 class="text-center">Atención al cliente</h1>
           </div>
           <div class="col">
           </div>
@@ -119,78 +119,81 @@
           <div class="modal-body">
             Realice la pregunta deseada, en breves momentos sera atendido.
             Gracias por su paciencia.
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn btn-warning">Entendido</button>
-          </div>
+            <form method="post" action="chat.html" class="mt-3">
+              <input id="preguntas" type="search" class="form-control" title="¿Alguna pregunta?" placeholder="¿Alguna pregunta?" aria-label="Search">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="submit" class="btn btn-warning">Preguntar</button>
+              </div>
+          </form>
         </div>
       </div>
     </div>
   </main>
 
-<footer class="container border-top mt-5 py-5">
-  <div class="row">
-    <div class="col-xl-3 col-sm-6 mb-2">
-      <h5>Compañia</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Quiénes somos</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Empleo</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Móvil</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
-      </ul>
-    </div>
+  <footer class="container border-top mt-5 py-5">
+    <div class="row">
+      <div class="col-xl-3 col-sm-6 mb-2">
+        <h5>Compañia</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Quiénes somos</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Empleo</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Móvil</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
+        </ul>
+      </div>
 
-    <div class="col-xl-3 col-sm-6 mb-2">
-      <h5>Ayuda</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
-        <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
-        <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
-      </ul>
-    </div>
+      <div class="col-xl-3 col-sm-6 mb-2">
+        <h5>Ayuda</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
+          <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+          <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
+        </ul>
+      </div>
 
-    <div class="col-xl-3 col-sm-12 mb-2">
-      <h5>Más</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Aerolinias</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tips</a></li>
-        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Blog</a></li>
-      </ul>
-    </div>
+      <div class="col-xl-3 col-sm-12 mb-2">
+        <h5>Más</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tasas de aerolinias</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Aerolinias</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Tips</a></li>
+          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Blog</a></li>
+        </ul>
+      </div>
 
-    <div class="col-xl-3 col-sm-12 mb-2">
-      <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h5 class="my-0 fw-normal">Atención al cliente <i class="bi bi-info-circle-fill"></i></h5>
-        </div>
-        <div class="card-body">
-          <p>¿Tienes alguna duda? Contacta con nuestro centro de atención al cliente</p>
-          <a href="atencionCliente.html" class="w-100 btn btn-lg btn-warning">Contactar</a>
+      <div class="col-xl-3 col-sm-12 mb-2">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h5 class="my-0 fw-normal">Atención al cliente <i class="bi bi-info-circle-fill"></i></h5>
+          </div>
+          <div class="card-body">
+            <p>¿Tienes alguna duda? Contacta con nuestro centro de atención al cliente</p>
+            <a href="atencionCliente.html" class="w-100 btn btn-lg btn-warning">Contactar</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="d-flex justify-content-between py-4 my-4 border-top">
-    <div class="container">
-      <div class="row align-items-start">
-        <div class="col-6 justify-content-start">
-          <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22" alt="Icono de la web representado por un avión de papel"></p>
-        </div>
-        <div class="col-6">
-          <ul class="list-unstyled d-flex justify-content-end">
-            <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i> Twitter</a></li>
-            <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i> Instagram</a></li>
-            <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i> Facebook</a></li>
-          </ul>
+    <div class="d-flex justify-content-between py-4 my-4 border-top">
+      <div class="container">
+        <div class="row align-items-start">
+          <div class="col-6 justify-content-start">
+            <p>© 2021 Company, Inc. All rights reserved. <img src="img/airplane.png" class="bi me-2" width="30" height="22" alt="Icono de la web representado por un avión de papel"></p>
+          </div>
+          <div class="col-6">
+            <ul class="list-unstyled d-flex justify-content-end">
+              <li class="ms-3"><a class="link-dark" href="https://twitter.com/"><i class="bi bi-twitter"></i> Twitter</a></li>
+              <li class="ms-3"><a class="link-dark" href="https://instagram.com/"><i class="bi bi-instagram"></i> Instagram</a></li>
+              <li class="ms-3"><a class="link-dark" href="https://facebook.com/"><i class="bi bi-facebook"></i> Facebook</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
