--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -13,7 +13,7 @@
     <div class="bg-dark fixed-top">
       <div class="container">
           <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <a href="index3.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
               <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
               <h4 class="text-light">Airplane</h4>
             </a>
@@ -43,15 +43,15 @@
                 Viajar
               </button>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item active" href="index2.html">Buscar vuelo</a></li>
-                <li><a class="dropdown-item" href="index2.html#moda">Ciudades de moda</a></li>
-                <li><a class="dropdown-item" href="index2.html#ofertas">Ofertas</a></li>
+                <li><a class="dropdown-item active" href="index3.html">Buscar vuelo</a></li>
+                <li><a class="dropdown-item" href="index3.html#moda">Ciudades de moda</a></li>
+                <li><a class="dropdown-item" href="index3.html#ofertas">Ofertas</a></li>
               </ul>
             </div>
             
             <div class="col-md-3 text-end">
               <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-              <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
+              <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
               <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
             </div>
           </header>
@@ -65,7 +65,7 @@
             <div class="col">
             </div>
             <div class="col-8">
-              <h1 class="text-center" style="color: #000000;">Añadir tarjeta de crédito</h1>
+              <h1 class="text-center">Añadir tarjeta de crédito</h1>
             </div>
             <div class="col">
             </div>
@@ -83,31 +83,31 @@
 
             <form method="post" action="perfilCompletoTarjeta.html">
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNombre" placeholder="Nombre" required>
+                <input type="text" class="form-control" id="floatingNombre" placeholder="Nombre" required="required">
                 <label for="floatingNombre">Nombre completo de la tarjeta*</label>
               </div>
 
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta"pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required>
+                <input type="text" class="form-control" id="floatingNum" placeholder="Número de la tarjeta" pattern="[0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9] [0-9][0-9][0-9][0-9]" required="required">
                 <label for="floatingNum">Número de la tarjeta (0000 0000 0000 0000)*
-                    <img src="https://i.imgur.com/2ISgYja.png" width="30">
-                    <img src="https://i.imgur.com/W1vtnOV.png" width="30">
-                    <img src="https://i.imgur.com/35tC99g.png" width="30">
+                    <img src="https://i.imgur.com/2ISgYja.png" width="30" alt="Logotipo de Mastercard">
+                    <img src="https://i.imgur.com/W1vtnOV.png" width="30" alt="Logotipo de Visa">
+                    <img src="https://i.imgur.com/35tC99g.png" width="30" alt="Logotipo de Stripe">
                 </label>
               </div>
 
               <div class="row g-2">
                 <div class="col-md">
                   <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9]/[0-9][0-9]" required>
+                    <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9]/[0-9][0-9]" required="required">
                     <label for="floatingFecha">Fecha de expiración (MM/AA)*</label>
                   </div>
                 </div>
                 <div class="col-md">
                   <div class="form-floating">
                     <div class="form-floating mb-3">
-                      <input type="text" class="form-control" id="floatingFecha" placeholder="Fecha de expiración" pattern="[0-9][0-9][0-9]" required>
-                      <label for="floatingFecha">CVV*</label>
+                      <input type="text" class="form-control" id="floatingCVV" placeholder="CVV" pattern="[0-9][0-9][0-9]" required="required">
+                      <label for="floatingCVV">CVV (000)*</label>
                     </div>
                   </div>
                 </div>
@@ -119,7 +119,7 @@
 
             <div class="text-center">
               <h3 class="mt-5 mb-2">¿Qué es el CVV?</h3>
-              <img src="img/cvv.png" width="500px"></img>
+              <img src="img/cvv.png" width="500px" alt="Explicación de que es el CVV de las tarjetas de crédito">
             </div>
           </div>
 
