--- a/billeteIV.html
+++ b/billeteIV.html
@@ -108,7 +108,7 @@
                 <div class="col border-start">
                   <p><b>Nombre:</b> Jhon</p>
                   <p><b>Apellidos:</b> Doe</p>
-                  <img src="img/barcode.png" width="150px">
+                  <img src="img/barcode.png" width="150px" alt="Imágen de un código de barras para identificar el vuelo">
                 </div>
               </div>
             </div>
@@ -156,7 +156,7 @@
                 <div class="col border-start">
                   <p><b>Nombre:</b> Jhon</p>
                   <p><b>Apellidos:</b> Doe</p>
-                  <img src="img/barcode.png" width="150px">
+                  <img src="img/barcode.png" width="150px" alt="Imágen de un código de barras para identificar el vuelo">
                 </div>
               </div>
             </div>
