--- a/editarPerfil.html
+++ b/editarPerfil.html
@@ -132,7 +132,7 @@
 
                   <div class="form-floating mb-3">
                     <input type="password" name="pass" value="pass" class="form-control" id="floatingPass" placeholder="Contraseña"/>            
-                    <label for="floatingContraseña">Contraseña</label>
+                    <label for="floatingPass">Contraseña</label>
                   </div>
 
                   <div class="form-floating mb-3">
