--- a/FAQs.html
+++ b/FAQs.html
@@ -140,8 +140,8 @@
                   </button>
                 </h2>
                 <div id="flush-collapse7" class="accordion-collapse collapse" aria-labelledby="flush-heading7" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Algunas compañías no requieren que se registre como equipaje especial si el artículo no pesa más de 23 kg. Sin embargo, si vas a transportar objetos de más de 32 kg, tendrás que solicitar un permiso para equipaje pesado.
-                    Revisa la política de la compañía aérea para comprobar qué se considera equipaje especial y cómo proceder con los artículos pesados. La mayoría de aerolíneas especifican cómo viajar con objetos como bicicletas, tablas de surf, instrumentos musicales, etc</div>
+                  <div class="accordion-body"><p>Algunas compañías no requieren que se registre como equipaje especial si el artículo no pesa más de 23 kg. Sin embargo, si vas a transportar objetos de más de 32 kg, tendrás que solicitar un permiso para equipaje pesado.
+                    Revisa la política de la compañía aérea para comprobar qué se considera equipaje especial y cómo proceder con los artículos pesados. La mayoría de aerolíneas especifican cómo viajar con objetos como bicicletas, tablas de surf, instrumentos musicales, etc</p></div>
                 </div>
               </div>
           </div>
