--- a/FAQs.html
+++ b/FAQs.html
@@ -83,9 +83,9 @@
                 </button>
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">En la mayoría de los casos, podrás cancelar tu reserva contactando con atención al cliente, pero no siempre se te devolverá el dinero.
+                <div class="accordion-body"><p>En la mayoría de los casos, podrás cancelar tu reserva contactando con atención al cliente, pero no siempre se te devolverá el dinero.
                     El importe a reembolsar depende de las condiciones tarifarias de tus billetes, del seguro y del servicio contratado. En función de las tarifas y las condiciones de la compañía aérea, tendrás derecho a un reembolso total, parcial o de ningún tipo. La mayoría de los billetes económicos no suelen ser reembolsables.
-                    Algunas aerolíneas también pueden aplicar un cargo de cancelación, y siempre hay elementos de las reservas que no son reembolsables.</div>
+                    Algunas aerolíneas también pueden aplicar un cargo de cancelación, y siempre hay elementos de las reservas que no son reembolsables.</p></div>
             </div>
             </div>
             <div class="accordion-item">
@@ -95,10 +95,10 @@
                 </button>
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Es posible que tengas derecho al reembolso de tus billetes, pero depende de muchos factores. Si quieres solicitar el rembolso de un billete, tendrás que cancelar tus vuelos. Accede a «Mis viajes» para solicitar la cancelación de tu(s) vuelo(s)
+                <div class="accordion-body"><p>Es posible que tengas derecho al reembolso de tus billetes, pero depende de muchos factores. Si quieres solicitar el rembolso de un billete, tendrás que cancelar tus vuelos. Accede a «Mis viajes» para solicitar la cancelación de tu(s) vuelo(s)
                     Si quieres cancelar, tu reembolso vendrá determinado por las condiciones de la tarifa.
                     Cada aerolínea aplica sus propias condiciones tarifarias, que pueden ser distintas de las de las otras compañías y variar en función del precio que has pagado por tu vuelo. La mayoría de los billetes económicos no suelen ser reembolsables.
-                    Además, es posible que se te ofrezcan alternativas (por ejemplo, cupones) o la posibilidad de cambiar tu reserva en lugar de un reembolso al contado.
+                    Además, es posible que se te ofrezcan alternativas (por ejemplo, cupones) o la posibilidad de cambiar tu reserva en lugar de un reembolso al contado.</p>
                 </div>
               </div>
             </div>
@@ -109,8 +109,8 @@
                 </button>
               </h2>
               <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Las compañías aéreas pueden verse forzadas a cambiar los horarios de sus vuelos por motivos de organización o de fuerza mayor. Si tu reserva sufre un cambio, te lo notificaremos por e-mail. Muchos de estos cambios son solo pequeñas modificaciones de horarios que no requieren de la confirmación del pasajero. Si dicho cambio afecta a tu hora de llegada al alojamiento, ponte en contacto con ellos directamente con la nueva información mostrada en el e-mail.
-                    Si el cambio o la cancelación requieren que realices alguna acción, nos pondremos en contacto contigo para indicarte cómo proceder para encontrar la opción más adecuada para ti.</div>
+                <div class="accordion-body"><p>Las compañías aéreas pueden verse forzadas a cambiar los horarios de sus vuelos por motivos de organización o de fuerza mayor. Si tu reserva sufre un cambio, te lo notificaremos por e-mail. Muchos de estos cambios son solo pequeñas modificaciones de horarios que no requieren de la confirmación del pasajero. Si dicho cambio afecta a tu hora de llegada al alojamiento, ponte en contacto con ellos directamente con la nueva información mostrada en el e-mail.
+                    Si el cambio o la cancelación requieren que realices alguna acción, nos pondremos en contacto contigo para indicarte cómo proceder para encontrar la opción más adecuada para ti.</p></div>
               </div>
             </div>
           <div class="accordion-item">
@@ -120,8 +120,8 @@
               </button>
             </h2>
             <div id="flush-collapse5" class="accordion-collapse collapse" aria-labelledby="flush-heading5" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Las compañías aéreas pueden verse forzadas a cambiar los horarios de sus vuelos por motivos de organización o de fuerza mayor. Si tu reserva sufre un cambio, te lo notificaremos por e-mail. Muchos de estos cambios son solo pequeñas modificaciones de horarios que no requieren de la confirmación del pasajero. Si dicho cambio afecta a tu hora de llegada al alojamiento, ponte en contacto con ellos directamente con la nueva información mostrada en el e-mail.
-                Si el cambio o la cancelación requieren que realices alguna acción, nos pondremos en contacto contigo para indicarte cómo proceder para encontrar la opción más adecuada para ti.</div>
+              <div class="accordion-body"><p>Las compañías aéreas pueden verse forzadas a cambiar los horarios de sus vuelos por motivos de organización o de fuerza mayor. Si tu reserva sufre un cambio, te lo notificaremos por e-mail. Muchos de estos cambios son solo pequeñas modificaciones de horarios que no requieren de la confirmación del pasajero. Si dicho cambio afecta a tu hora de llegada al alojamiento, ponte en contacto con ellos directamente con la nueva información mostrada en el e-mail.
+                Si el cambio o la cancelación requieren que realices alguna acción, nos pondremos en contacto contigo para indicarte cómo proceder para encontrar la opción más adecuada para ti.</p></div>
             </div>
           </div>
           <div class="accordion-item">
@@ -131,7 +131,7 @@
               </button>
             </h2>
             <div id="flush-collapse6" class="accordion-collapse collapse" aria-labelledby="flush-heading6" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">El equipaje de mano que puedes llevar a bordo variará según la aerolínea con la que viajes. En general, las dimensiones del equipaje de cabina permitidas son 55 cm x 40 cm x 23 cm, con un peso máximo de 10 kg</div>
+              <div class="accordion-body"><p>El equipaje de mano que puedes llevar a bordo variará según la aerolínea con la que viajes. En general, las dimensiones del equipaje de cabina permitidas son 55 cm x 40 cm x 23 cm, con un peso máximo de 10 kg.</p></div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-heading7">
