--- a/billeteIV.html
+++ b/billeteIV.html
@@ -86,7 +86,7 @@
                   <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
                 </div>
                 <div class="col d-flex flex-row-reverse">
-                  <h4 class="text-light">Airplane</h4>
+                  <h4 class="text-light">Airplane - Premium</h4>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
                   <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
                 </div>
                 <div class="col d-flex flex-row-reverse">
-                  <h4 class="text-light">Airplane</h4>
+                  <h4 class="text-light">Airplane - Premium</h4>
                 </div>
               </div>
             </div>
