--- a/index3.html
+++ b/index3.html
@@ -182,7 +182,7 @@
     
       <section class="mt-5">
         <div class="row align-items-center mx-5 mb-4">
-          <h2 id="moda" class="text-center" style="color: #000000;">Ciudades que están de moda</h2>
+          <h2 id="moda" class="text-center">Ciudades que están de moda</h2>
           <div class="col mt-4">
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
@@ -291,7 +291,7 @@
             <div class="col">
             </div>
             <div class="col">
-              <h2 id="ofertas" class="text-center" style="color: #000000;">Las mejores ofertas</h2>
+              <h2 id="ofertas" class="text-center">Las mejores ofertas</h2>
               <p class="text-center">Encuentra la mejor para ti</p>
             </div>
             <div class="col">
@@ -345,7 +345,7 @@
             <div class="col-1">
             </div>
             <div class="col-10">
-              <h2 class="text-center" style="color: #000000;">Preguntas frecuentes</h2>
+              <h2 class="text-center">Preguntas frecuentes</h2>
               <p class="text-center mb-4">¿En qué podemos ayudarte?</p>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
