--- a/seguros.html
+++ b/seguros.html
@@ -62,7 +62,7 @@
 
 <main class="py-5">
       <div class="container">
-        <form method="post" action="billeteIV.html">
+        <form method="post" action="infoReserva.html">
             <div class="row">
               <div class="col"></div>
               <div class="col-10">
