--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -73,36 +73,36 @@
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
                 <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label1" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
+                    <input class="form-check-input1" type="checkbox" id="flexSwitchCheckDefault">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Seleccionar anuncios basicos</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"> 
+                    <label class="form-check-label2" for="flexSwitchCheckChecked">Seleccionar anuncios basicos</label>
+                    <input class="form-check-input2" type="checkbox" id="flexSwitchCheckDefault"> 
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckDisabled">Contenido personalizado</label>
+                    <input class="form-check-input3" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label3" for="flexSwitchCheckDisabled">Contenido personalizado</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Perfil y muestra de anuncios personalizados</label>
+                    <input class="form-check-input4" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label4" for="flexSwitchCheckCheckedDisabled">Perfil y muestra de anuncios personalizados</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
+                    <input class="form-check-input5" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label5" for="flexSwitchCheckCheckedDisabled">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
+                    <input class="form-check-input6" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label6" for="flexSwitchCheckCheckedDisabled">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Utilizar datos de localizacion geografica precisa</label>
+                    <input class="form-check-input7" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label7" for="flexSwitchCheckCheckedDisabled">Utilizar datos de localizacion geografica precisa</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
+                    <input class="form-check-input8" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label8" for="flexSwitchCheckCheckedDisabled">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
                   </div>
                   
                   <div class="container py-4 p-5">
