--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -72,6 +72,7 @@
         </section>
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
+          <form method="post" action="index3.html">
                 <div class="form-check form-switch">
                     <label class="form-check-label1" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
                     <input class="form-check-input1" type="checkbox" id="flexSwitchCheckDefault">
@@ -109,7 +110,8 @@
                   <input class="btn btn-warning" type="submit" value="Guardar">
                   <button type="button" class="btn">Cancelar</button>    
                   </div>
-          </div>
+          </form>
+        </div>
     </div>
   </main>
 
