--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -73,6 +73,7 @@
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
           <form method="post" action="index3.html">
+            <fieldset>
                 <div class="form-check form-switch">
                     <label class="form-check-label1" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
                     <input class="form-check-input1" type="checkbox" id="flexSwitchCheckDefault">
@@ -110,6 +111,7 @@
                   <input class="btn btn-warning" type="submit" value="Guardar">
                   <button type="button" class="btn">Cancelar</button>    
                   </div>
+              </fieldset>
           </form>
         </div>
     </div>
