headers y footers listos

--- a/configuracionPrivacidad.html
+++ b/configuracionPrivacidad.html
@@ -72,44 +72,49 @@
         </section>
         <h4 class="border-top text-center py-2">Usted permite:</h4>
         <div class="container py-1 p-5">
+          <form method="post" action="index3.html">
+            <fieldset>
                 <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Almacenar o acceder a informacion en un dispositivo</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault1">Almacenar o acceder a informacion en un dispositivo</label>
+                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault1">
                   </div>
                   <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckChecked">Seleccionar anuncios basicos</label>
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"> 
+                    <label class="form-check-label" for="flexSwitchCheckChecked2">Seleccionar anuncios basicos</label>
+                    <input class="form-check-input2" type="checkbox" id="flexSwitchCheckDefault2"> 
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckDisabled">Contenido personalizado</label>
+                    <input class="form-check-input3" type="checkbox" id="flexSwitchCheckDefault3">
+                    <label class="form-check-label" for="flexSwitchCheckDisabled3">Contenido personalizado</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Perfil y muestra de anuncios personalizados</label>
+                    <input class="form-check-input4" type="checkbox" id="flexSwitchCheckDefault4">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled4">Perfil y muestra de anuncios personalizados</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
+                    <input class="form-check-input5" type="checkbox" id="flexSwitchCheckDefault5">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled5">Medicion de anuncios y del contenido, informacion sobre el publico y desarrollo de productos</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
+                    <input class="form-check-input6" type="checkbox" id="flexSwitchCheckDefault6">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled6">Analizar activamente las caracteristicas del dispositivo para su identificacion</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Utilizar datos de localizacion geografica precisa</label>
+                    <input class="form-check-input7" type="checkbox" id="flexSwitchCheckDefault7">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled7">Utilizar datos de localizacion geografica precisa</label>
                   </div>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
+                    <input class="form-check-input8" type="checkbox" id="flexSwitchCheckDefault8">
+                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled8">Compartir tus analisis de navegacion y grupos de interes con anunciantes</label>
                   </div>
                   
                   <div class="container py-4 p-5">
                   <input class="btn btn-warning" type="submit" value="Guardar">
                   <button type="button" class="btn">Cancelar</button>    
                   </div>
-          </div>
+              </fieldset>
+          </form>
+        </div>
+      </div>
     </div>
   </main>
 
@@ -130,7 +135,7 @@
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
           <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+          <li class="nav-item mb-2"><a href="configuracionPrivacidad.html" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
           <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
         </ul>
       </div>
