--- a/infoReserva.html
+++ b/infoReserva.html
@@ -10,7 +10,6 @@
     <title>Inicio</title>
 </head>
 <body>
-  
   <div class="bg-dark fixed-top">
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
@@ -52,12 +51,12 @@
           
           <div class="col-md-3 text-end">
             <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-            <a href="perfilCompletoTarjeta.html" class="btn btn-light">Mi perfil</a>
+            <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
             <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
           </div>
         </header>
     </div>
-</div>
+  </div>
 
   <main class="my-5">
     <section class="bg-img pt-5">
@@ -197,17 +196,17 @@
           <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Códigos promocionales</a></li>
         </ul>
       </div>
-
+  
       <div class="col-xl-3 col-sm-6 mb-2">
         <h5>Ayuda</h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
           <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-          <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+          <li class="nav-item mb-2"><a href="configuracionPrivacidad.html" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
           <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
         </ul>
       </div>
-
+  
       <div class="col-xl-3 col-sm-12 mb-2">
         <h5>Más</h5>
         <ul class="nav flex-column">
@@ -217,7 +216,7 @@
           <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Blog</a></li>
         </ul>
       </div>
-
+  
       <div class="col-xl-3 col-sm-12 mb-2">
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
@@ -230,7 +229,7 @@
         </div>
       </div>
     </div>
-
+  
     <div class="d-flex justify-content-between py-4 my-4 border-top">
       <div class="container">
         <div class="row align-items-start">
