--- a/perfilCompleto.html
+++ b/perfilCompleto.html
@@ -13,7 +13,7 @@
     <div class="bg-dark fixed-top">
       <div class="container">
           <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-            <a href="index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <a href="index3.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
               <img src="img/airplane.png" class="bi me-2" width="40" height="32" alt="Icono de la web representado por un avión de papel">
               <h4 class="text-light">Airplane</h4>
             </a>
@@ -37,21 +37,21 @@
                 </div>
               </form>
             </div>
-
+  
             <div class="dropdown">
               <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 Viajar
               </button>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item active" href="index2.html">Buscar vuelo</a></li>
-                <li><a class="dropdown-item" href="index2.html#moda">Ciudades de moda</a></li>
-                <li><a class="dropdown-item" href="index2.html#ofertas">Ofertas</a></li>
+                <li><a class="dropdown-item active" href="index3.html">Buscar vuelo</a></li>
+                <li><a class="dropdown-item" href="index3.html#moda">Ciudades de moda</a></li>
+                <li><a class="dropdown-item" href="index3.html#ofertas">Ofertas</a></li>
               </ul>
             </div>
             
             <div class="col-md-3 text-end">
               <a href="reservas.html" class="btn btn-light me-1">Reservas</a>
-              <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
+              <a href="perfilCompletoTarjeta.html" class="btn btn-light me-1">Perfil</a>
               <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
             </div>
           </header>
@@ -134,7 +134,7 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="FAQs.html" class="nav-link p-0 text-muted">Preguntas frecuentes</a></li>
             <li class="nav-item mb-2"><a href="comoFuncionaNuestraWeb.html" class="nav-link p-0 text-muted">Cómo funciona nuestra web</a></li>
-            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
+            <li class="nav-item mb-2"><a href="configuracionPrivacidad.html" class="nav-link p-0 text-muted">Configuración de privacidad</a></li>
             <li class="nav-item mb-2"><a href="terminosYCondiciones.html" class="nav-link p-0 text-muted">Términos y condiciones</a></li>
           </ul>
         </div>
@@ -179,6 +179,7 @@
         </div>
       </div>
     </footer>
+    
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
