--- a/perfilCompletoTarjeta.html
+++ b/perfilCompletoTarjeta.html
@@ -65,7 +65,7 @@
             <div class="col">
             </div>
             <div class="col">
-              <h1 class="text-center" style="color: #000000;">Mi perfil</h1>
+              <h1 class="text-center">Mi perfil</h1>
             </div>
             <div class="col">
             </div>
