--- a/reservas.html
+++ b/reservas.html
@@ -85,7 +85,7 @@
             </div>
             <div class="card ms-1 mb-3">
               <div class="card-body">
-                <i class="bi bi-arrow-right me-5"></i>PARÍS<span class="ms-5"></span><span class="ms-4"></span><span class="ms-1"></span><span class="ms-5">Ida: 10/11/2022</span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"><a href="#" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Cancelar</a></span>
+                <i class="bi bi-arrow-right me-5"></i>PARÍS<span class="ms-5"></span><span class="ms-4"></span><span class="ms-1"></span><span class="ms-5">Ida: 10/11/2022</span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"></span><span class="ms-5"><a href="billeteI.html" class="btn btn-warning">Detalles</a></span><span class="ms-5"><a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Cancelar</a></span>
               </div>
             </div>
           </div>
