--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,8 @@
               </div>
               
               <div class="col-md-3 text-end">
-                <a href="perfil.html" class="btn btn-light">Mi perfil</a>
+                <a href="reservas.html" class="btn btn-light">Reservas</a>
+                <a href="perfil.html" class="btn btn-light me-1">Perfil</a>
                 <a href="index.html" class="btn btn-warning">Cerrar Sesión</a>
               </div>
             </header>
