--- a/anadirTarjeta.html
+++ b/anadirTarjeta.html
@@ -59,7 +59,25 @@
     </div>
 
     <main class="my-5">
-      <section class="bg-img pt-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="index3.html">Perfil</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Atención al cliente</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+
+      <section class="bg-img">
         <div class="container mb-4">
           <div class="row align-items-center">
             <div class="col">
@@ -128,7 +146,6 @@
           </div>
         </div>
       </div>
-
 
     </main>
 
