--- a/comoFuncionaNuestraWeb.html
+++ b/comoFuncionaNuestraWeb.html
@@ -59,6 +59,23 @@
     </div>
 
     <main class="py-5">
+      <section class="pt-5">
+        <div class="container">
+          <div class="col">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Como funciona nuestra web</li>
+              </ol>
+            </nav>
+          </div>
+  
+          <div class="col">
+            
+          </div>
+        </div>
+      </section>
+      
       <h1 class="text-center mt-5 mb-3">¿Cómo funciona nuestra web?</h1>
         <div class="container py-3">
           <div class="card mb-3" >
