--- a/perfil.html
+++ b/perfil.html
@@ -122,6 +122,13 @@
                 </div>
               </div>
 
+              <div class="row border-top mt-4">
+                <h3 class="mt-2">privacidad</h3>
+                <div class="col">
+                  <a href="configuracionPrivacidad.html" class="btn btn-warning">Editar privacidad</a>
+                </div>
+              </div>
+
               <h4 class="mt-3">Completa tu perfil editando tus datos y añadiendo una tarjeta</h4>
                 <div class="progress">
                   <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
