--- a/perfil.html
+++ b/perfil.html
@@ -123,7 +123,7 @@
               </div>
 
               <div class="row border-top mt-4">
-                <h3 class="mt-2">privacidad</h3>
+                <h3 class="mt-2">Privacidad</h3>
                 <div class="col">
                   <a href="configuracionPrivacidad.html" class="btn btn-warning">Editar privacidad</a>
                 </div>
