--- a/FAQs.html
+++ b/FAQs.html
@@ -77,7 +77,7 @@
       </div>
     </section>
 
-    <div class="container mt-5">
+    <div class="container">
       <section class="bg-img pt-5">
         <div class="container mb-4">
           <div class="row align-items-center">
