--- a/infoReserva.html
+++ b/infoReserva.html
@@ -78,7 +78,7 @@
       </div>
     </section>
     
-    <section class="bg-img pt-5">
+    <section class="bg-img">
       <div class="container mb-4">
         <div class="row align-items-center">
           <div class="col">
