--- a/seguros.html
+++ b/seguros.html
@@ -59,7 +59,25 @@
     </div>
   </div>
 
-    <main class="py-5">
+  <main class="py-5">
+    <section class="pt-5">
+      <div class="container">
+        <div class="col">
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index3.html">Inicio</a></li>
+              <li class="breadcrumb-item"><a href="buscarVuelosIdaYVuelta.html">Búsqueda vuelo</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Seguros</li>
+            </ol>
+          </nav>
+        </div>
+
+        <div class="col">
+          
+        </div>
+      </div>
+    </section>
+
       <section class="bg-img py-5">
         <div class="container">
           <div class="row align-items-center">
